force-app/main/default/objects/zkmulti__MCShipmentInfo__c/zkmulti__MCShipmentInfo__c.object-meta.xml
<CustomObject>
    <label>Shipment Info</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Shipment Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>