force-app/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__Contents_Explanation__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Contents_Explanation__c</fullName>
    <label>Contents Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>