force-app/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__Contents_Type__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Contents_Type__c</fullName>
    <label>Contents Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>