force-app/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Email_Template_Id__c</fullName>
    <label>Email Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>