force-app/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__EMailNotifyOnEstimatedDelivery__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EMailNotifyOnEstimatedDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notify on Estimated Delivery</label>
    <type>Checkbox</type>
</CustomField>