force-app/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__EMailNotifyOnTender__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EMailNotifyOnTender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notify on Tender</label>
    <type>Checkbox</type>
</CustomField>