force-app/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__HandlingUnits__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__HandlingUnits__c</fullName>
    <label>Handling Units</label>
    <length>3</length>
    <type>Text</type>
</CustomField>