force-app/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__Last_Track_Update_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Last_Track_Update_Status_Code__c</fullName>
    <label>Last Track Update Status Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>