force-app/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__Latest_Pickup__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Latest_Pickup__c</fullName>
    <label>Latest Pickup</label>
    <type>DateTime</type>
</CustomField>