force-app/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LicenseNumber__c</fullName>
    <label>License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>