force-app/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__NonMachineable__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NonMachineable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Machineable</label>
    <type>Checkbox</type>
</CustomField>