force-app/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__RecipientTaxId__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__RecipientTaxId__c</fullName>
    <label>Recipient Tax ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>