force-app/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__Restriction_Comments__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Restriction_Comments__c</fullName>
    <label>Restriction Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>