force-app/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__SenderTaxIdType__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SenderTaxIdType__c</fullName>
    <label>Sender Tax ID Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>