force-app/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__ShipmentTypeExt__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ShipmentTypeExt__c</fullName>
    <label>Shipment Type Ext</label>
    <length>200</length>
    <type>Text</type>
</CustomField>